# nbp-currency-calculator

./: .env  .gitignore  LICENSE  README.md  backend.env  docker-compose.dev.yaml  docker-compose.yaml  frontend.env
apps/backend/: README.md  dev.env  docker-compose.test.yaml  mypy.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 50ec4b5a5098_change_table_request_history_to_.py  617c0ef169a4_changed_exchange_rate_to_amount.py  8156b3c7665f_alter_columns_to_be_nullable.py  92be5397c21b_created_table_request_history.py
apps/backend/db/init/: init.sql
apps/backend/docker/: app.Dockerfile  migrations.Dockerfile  python.Dockerfile  test.Dockerfile
apps/backend/src/: app.py  container.py  main.py  settings.py
apps/backend/src/db/exchange_history/: connection.py
apps/backend/src/db/exchange_history/models/: __init__.py  (+1 more)
apps/backend/src/db/requests_history/: connection.py
apps/backend/src/db/requests_history_db/: connection.py
apps/backend/src/shared/exceptions/: server_failed_request_error.py  server_unavailable_error.py
apps/backend/tests/: conftest.py  testclient.py
apps/backend/tests/currency/integration/: test_currency_calculate.py  test_db_exchange_history_repository.py  test_db_routes_history_repository.py  test_exchange_history.py
apps/backend/tests/currency/unit/: test_db_requests_history_repository.py  test_exchange_service.py  test_http_exchange_rate_repository.py
apps/backend/tests/helpers/: db_exchange_history.py  db_requests_history.py  random.py
apps/backend/tests/integration/: test_currency_calculate.py
(+50 files in other folders)
