[tool.poetry]
name = "nbp-currency-calculator"
version = "0.1.0"
description = ""
authors = ["Maciej Hankus <maciej.hankus0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "0.104.1"
dependency-injector = "4.41.0"
psycopg2 = "2.9.9"
pydantic = "2.5.2"
alembic = "1.12.1"
pydantic-settings = "2.1.0"
uvicorn = "0.24.0.post1"

[tool.poetry.group.dev.dependencies]
mypy = "1.7.1"
ruff = "0.1.6"
isort = "5.12.0"
black = "23.11.0"
pytest = "7.4.3"
pytest-httpx = "0.27.0"
 

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
