[tool.poetry]
name = "nbp-currency-calculator"
version = "0.1.0"
description = ""
authors = ["Maciej Hankus <maciej.hankus0@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = "0.104.1"
dependency-injector = "4.41.0"
pydantic = "2.5.2"
alembic = "1.12.1"
pydantic-settings = "2.1.0"
uvicorn = "0.24.0.post1"
pyhumps = "3.8.0"
asyncpg = "0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "2.0.23"}
psycopg2-binary = "2.9.9"

[tool.poetry.group.dev.dependencies]
mypy = "1.7.1"
ruff = "0.1.6"
isort = "5.12.0"
black = "23.11.0"
pytest = "7.4.3"
pytest-httpx = "0.27.0"
pytest-asyncio = "0.21.1"
 
[tool.isort]
force_single_line = true
line_length = 120
src_paths = ["src", "tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
